--- a/src/ng-bar.css
+++ b/src/ng-bar.css
@@ -1,6 +1,6 @@
 #ng-bar {
 	width:100%;
-	height: 32px;
+	height: 24px;
 	position:fixed;
 	left:0;
 	right:0;
@@ -8,11 +8,20 @@
 	padding:0 40px 10px 0;
 	border:1px solid #11163E;
 	background-color: #D6F3FF;
+	font-family: Verdana;
 }
 
 #ng-bar>div {
-	padding: 2px 10px; 
+	padding: 2px 10px;
 	font-size: 12px;
-	display: inline-block;
-	margin-right: 10px;
+	display: block;
+	float: left;
+	border-right: 1px solid #000;
+}
+#ng-bar h4 {
+	margin: 8px 8px;
+}
+#ng-bar .logo {
+	float: right;
+	color: ##627E96;
 }
