--- a/src/ng-bar.css
+++ b/src/ng-bar.css
@@ -1,89 +1,109 @@
 #ng-bar-wrap {
-	width: 100%;
-	position: fixed;
-	bottom: 0px;
-	z-index: 9999;
-	height: 32px;
-	font-family: Verdana;
-	font-size: 12px;
-	border:1px solid #11163E;
-	background-color: #D6F3FF;
+  width: 100%;
+  position: fixed;
+  bottom: 0px;
+  z-index: 9999;
+  height: 32px;
+  font-family: Verdana;
+  font-size: 12px;
+  border:1px solid #11163E;
+  background-color: #FFF;
 
-/*	width:100%;
-	height: 24px;
-	position:fixed;
-	left:0;
-	right:0;
-	bottom:0;
-	padding:0 40px 10px 0;
-	font-family: Verdana;*/
+/*  width:100%;
+  height: 24px;
+  position:fixed;
+  left:0;
+  right:0;
+  bottom:0;
+  padding:0 40px 10px 0;
+  font-family: Verdana;*/
 }
 #ng-bar {
-	margin-bottom: 28px;
+  margin-left: 24px;
+  margin-bottom: 28px;
 }
 
 #ng-bar>div {
-	padding: 2px 10px;
-	font-size: 12px;
-	display: block;
-	float: left;
-	border-right: 1px solid #000;
-	position: relative;
-	cursor: pointer;
+  padding: 2px 10px;
+  font-size: 12px;
+  display: block;
+  float: left;
+  border-right: 1px solid #000;
+  position: relative;
+  cursor: pointer;
 }
 #ng-bar h4 {
-	margin: 8px 8px;
-	font-family: Verdana;
-	font-size: 12px;
+  margin: 8px 8px;
+  font-family: Verdana;
+  font-size: 12px;
 }
 #ng-bar .logo {
-	float: right;
-	color: ##627E96;
+  float: right;
+  color: ##627E96;
+}
+#ng-bar-onoff {
+  width: 28px;
+  position: fixed;
+  bottom: 0px;
+  left: 0px;
+  z-index: 9999;
+  height: 32px;
+
+  padding: 4px;
+  line-height: 24px;
+  font-size: 14px;
+  font-weight: bold;
+  background: #EEE;
+  border: 1px solid #ccc;
+  border-radius: 0 4px 4px 0;
+}
+#ng-bar-onoff:hover {
+  background: #EFEEEF;
 }
 #ng-bar .ngbar-app-name {
-	margin-left: 8px;
+  margin-left: 8px;
 }
 
 #ng-bar .sub {
-	display: none;
-	position: absolute;
-	bottom: 32px;
-	left: 0;
-	margin-bottom: 2px;
-	border: 1px solid #ccc;
-	max-height: 300px;
-	min-height: 40px;
-	min-width: 180px;
-	overflow-y: auto;
-	background: #fff;
-	padding-right:20px;
+  display: none;
+  position: absolute;
+  bottom: 32px;
+  left: 0;
+  margin-bottom: 2px;
+  border: 1px solid #ccc;
+  max-height: 300px;
+  min-height: 40px;
+  min-width: 180px;
+  overflow-y: auto;
+  background: #fff;
+  padding-right:20px;
 }
 #ng-bar .active {
-	background: #C9E7F4;
+  background: #C9E7F4;
 }
 #ng-bar .active .sub {
-	display: block;
+  display: block;
 }
 
 #ng-bar .ng-bar-plugin {
-	
+  
 }
 #ng-bar .sub ul {
-	padding-left: 15px;
+  padding-left: 15px;
 }
 #ng-bar .sub li { 
-	list-style-type: none;
-	white-space: nowrap;
+  list-style-type: none;
+  white-space: nowrap;
 }
 #ng-bar li.has-sub:hover:after {
-	content: '▶';
-	float: right;
+  content: '▶';
+  float: right;
 }
-#ng-bar .hidden {
-	display: none;
+#ng-bar .hidden, #ng-bar-wrap.hidden {
+  display: none;
 }
 #ng-bar .cnt {
-	font-weight: bold;
-	paddin-left: 10px;
-	color: #302F31;
+  font-weight: bold;
+  paddin-left: 10px;
+  color: #302F31;
 }
