--- a/src/ng-bar.css
+++ b/src/ng-bar.css
@@ -77,7 +77,7 @@
   min-width: 180px;
   overflow-y: auto;
   background: #fff;
-  padding-right:20px;
+  padding: 4px 20px 4px 10px;
 }
 #ng-bar .active {
   background: #C9E7F4;
@@ -107,4 +107,10 @@
   font-weight: bold;
   paddin-left: 10px;
   color: #302F31;
+}
+#ng-bar table  {
+  margin: 4px 10px 4px 10px;
+}
+#ng-bar .nw td, #ng-bar .nw th {
+  white-space: nowrap;
 }
