Added some icons, fixed styles, fixed click events

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,4 +1,5 @@
 @import url('variables.less');
+@import url('mixins.less');
 @import url('wrap.less');
 @import url('bar.less');
 @import url('plugin.less');
