--- a/src/styles/wrap.less
+++ b/src/styles/wrap.less
@@ -15,15 +15,15 @@
 }
 
 #ng-bar-onoff {
-  width: 28px;
+  width: 20px;
   position: fixed;
   bottom: 0px;
   left: 0px;
   z-index: 9999;
   height: @bar-height;
 
-  padding: 4px;
-  line-height: 24px;
+  padding: 0 0 0 6px;
+  line-height: 32px;
   font-size: 14px;
   font-weight: bold;
   background: @switch-background;
