--- a/src/styles/bar.less
+++ b/src/styles/bar.less
@@ -1,7 +1,7 @@
 #ng-bar {
   margin-left: 24px;
   margin-bottom: 28px;
-
+  color: @text-color;
 
   &>div {
     padding: 2px 10px;
@@ -29,11 +29,23 @@
     padding: auto 8px;
   }
 
- .logo {
+  .angular {
+    .embed-icon('./img/angular.png');
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  .logo {
     float: right;
     color: ##627E96;
     font-size: 12px;
     line-height: 24px;
+  }
+
+  .github {
+    .embed-icon('./img/github.png');
+    width: 28px;
+    height: 28px;
   }
 
   .ngbar-app-name {
