--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -12,6 +12,9 @@
 
 @list-group-title-background: #EEEEEE;
 
+@counter-border-color: #BBBBBB;
+@counter-background: #EEEEEE;
+
 
 // misc
 @count-info-color: #333333;
