--- a/src/styles/plugin.less
+++ b/src/styles/plugin.less
@@ -9,6 +9,10 @@
     // count information
     span {
       font-weight: bolder;
+      padding: 2px 4px;
+      border: 1px solid @counter-border-color;
+      border-radius: 4px;
+      background: @counter-background;
     }
   }
 
@@ -32,7 +36,7 @@
     ul {
       padding-left: 10px;
     }
-    li { 
+    li {
       list-style-type: none;
       white-space: nowrap;
 
