--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -15,6 +15,11 @@
 @counter-border-color: #BBBBBB;
 @counter-background: #EEEEEE;
 
+// popup div
+@plugin-sub-color: #111111;
+@plugin-sub-border: lighten(@bar-border-color, 10%);
+@plugin-sub-background: #FFFFFF;
+
 
 // misc
 @count-info-color: #333333;
