--- a/src/styles/plugin.less
+++ b/src/styles/plugin.less
@@ -61,6 +61,13 @@
       float: right;
     }
 
+    pre {
+      padding: 2px 4px;
+      border: 1px solid #ccc;
+      background: #eee;
+      border-radius: 4px;
+    }
+
   }
 
   // count in list
