Refactoring plugin structure for easier usage

--- a/src/styles/bar.less
+++ b/src/styles/bar.less
@@ -3,7 +3,7 @@
   margin-bottom: 28px;
   color: @text-color;
 
-  &>div {
+  &>.ng-bar-plugin {
     padding: 2px 5px;
     font-size: 12px;
     display: block;
@@ -37,9 +37,10 @@
 
   .logo {
     float: right;
-    color: ##627E96;
+    color: #627E96;
     font-size: 12px;
     line-height: 24px;
+    margin-right: 5px;
   }
 
   .github {
