--- a/src/styles/plugin.less
+++ b/src/styles/plugin.less
@@ -87,7 +87,8 @@
     }
   }
 
-  &.active {
+  &.active,
+  &:hover {
     background: @plugin-background-active;
 
     .sub {
@@ -124,13 +125,4 @@
     .embed-icon('./img/plug.png');
   }
 
-
-  #ngbar-scopes {
-    margin-left: 8px;
-    background: #EAEEF8
-  }
-  #ngbar-watchers {
-    margin-left: 8px;
-    background: #FFF5F8;
-  }
 }
